@@ -1,3 +1,7 @@
+2003-10-17  Bruno Haible  <bruno@clisp.org>
+
+	* binary-io.h: Avoid warnings on Cygwin.
+
 2003-12-28  Bruno Haible  <bruno@clisp.org>
 
 	* wait-process.c (wait_subprocess): Add ignore_sigpipe argument.
